--- a/RoomEdu/app/src/main/res/values/strings.xml
+++ b/RoomEdu/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
 
     <string name="shoes">ОБУВЬ</string>
     <string name="accessories">АКСЕССУАРЫ</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
