--- a/RoomRecyclerView/app/src/main/res/values/strings.xml
+++ b/RoomRecyclerView/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
 
     <string name="shoes">ОБУВЬ</string>
     <string name="accessories">АКСЕССУАРЫ</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
