--- a/RoomRecyclerView/app/src/main/res/values/strings.xml
+++ b/RoomRecyclerView/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
 
     <string name="labelEnterCategory">Введите название категории</string>
     <string name="labelEnterNameProduct">Введите название товара</string>
+    <string name="labelEnterNumberCategory">Введите номер категории</string>
     <string name="labelEnterPriceProduct">Введите цену товара</string>
 
     <string name="deleteAllCategories">УДАЛИТЬ ВСЕ КАТЕГОРИИ</string>
@@ -22,8 +23,6 @@
 
     <string name="shoes">ОБУВЬ</string>
     <string name="accessories">АКСЕССУАРЫ</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
