--- a/RoomRecyclerView/app/src/main/res/values/strings.xml
+++ b/RoomRecyclerView/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
 
     <string name="shoes">ОБУВЬ</string>
     <string name="accessories">АКСЕССУАРЫ</string>
+    <string name="hello_blank_fragment">Hello World</string>
 
 
 </resources>
